# PyPtt

./: .buildinfo  .dockerignore  .gitignore  .travis.yml  Big5ToUnicode.txt  Board.txt  BuildExe.bat  CLAUDE.md  CNAME  Demo.py  Dockerfile  EXPORT_GUIDE.md  Echo.py  EchoA.py  EchoB.py  EchoClient.py  EchoServer.py  GourceScript.bat  LICENSE  MANIFEST.in  OldBug.py  PTT.py  PTT2_QUICKSTART.md  PTTTelnetCrawlerLibrary.py  PTTTelnetCrawlerLibraryErrorCode.py  PTTTelnetCrawlerLibraryUtil.py  PTTUtil.py  README.md  README_PTT2.md  StressTest.py  Test.py  Test.spec  Test_old.py  UAOMapGenerator.py  api.html  changelog.html  codecov.yml  dev.html  develop.html  docker.html  (+38 more)
.github/: secret_scanning.yml
OldBug/: Big5.txt
PTTLibrary/: Big5uao.py  CheckValue.py  Command.py  Config.py  ConnectCore.py  Core.py  DataType.py  ErrorCode.py  Exceptions.py  Information.py  Log.py  OneThread.py  PTT.py  PTTTelnetCrawlerLibrary_old.py  PTT_old.py  PTTdefine.py  SSHPTT.py  Screens.py  Synchronize.py  UnicodeToBig5.txt  Util.py  Ver.py  Version.py  _api_bucket.py  _api_get_board_info.py  _api_get_newest_index.py  _api_get_post.py  _api_get_user.py  _api_give_money.py  _api_loginout.py  _api_mail.py  _api_mark_post.py  _api_post.py  _api_push.py  _api_reply_post.py  _api_search_user.py  _api_waterball.py  api_CallStatus.py  api_WaterBall.py  api_bucket.py  (+27 more)
PTTLibrary.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
PTTlibrary/: PTT.py  PTTLibrary.py
PyPtt/: PTT.py  __init__.py  _api_bucket.py  _api_call_status.py  _api_change_pw.py  _api_comment.py  _api_del_post.py  _api_edit_post.py  _api_get_article.py  _api_get_board_info.py  _api_get_board_list.py  _api_get_bottom_post_list.py  _api_get_favourite_board.py  _api_get_newest_index.py  _api_get_post.py  _api_get_post_index.py  _api_get_post_list.py  _api_get_time.py  _api_get_user.py  _config.py  (+33 more)
(+401 files in other folders)
